--- a/KhachHang/app/src/main/AndroidManifest.xml
+++ b/KhachHang/app/src/main/AndroidManifest.xml
@@ -12,14 +12,14 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.MainActivity">
+        <activity android:name=".view.activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.RegisterActivity" />
+        <activity android:name=".view.activity.RegisterActivity" />
 
         <service android:name=".service.MyFirebaseMessagingService">
             <intent-filter>
@@ -32,7 +32,7 @@
             </intent-filter>
         </service>
 
-        <activity android:name=".activity.FeedbackActivity"></activity>
+        <activity android:name=".view.activity.FeedbackActivity"></activity>
     </application>
 
 </manifest>
