--- a/QuanLyNhaHang/app/src/main/AndroidManifest.xml
+++ b/QuanLyNhaHang/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".view.activity.MainActivity">
+            android:name=".phucVuView.activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,7 +21,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".view.activity.LoginActivity"
+            android:name=".phucVuView.activity.LoginActivity"
             android:label="@string/title_activity_login">
 
         </activity>
