--- a/KhachHang/app/src/main/AndroidManifest.xml
+++ b/KhachHang/app/src/main/AndroidManifest.xml
@@ -12,14 +12,16 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.activity.MainActivity">
+        <activity android:name=".view.activity.MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.activity.RegisterActivity" />
+        <activity android:name=".view.activity.RegisterActivity"
+            android:screenOrientation="portrait"/>
 
         <service android:name=".service.MyFirebaseMessagingService">
             <intent-filter>
