--- a/QuanLyNhaHang/app/src/main/AndroidManifest.xml
+++ b/QuanLyNhaHang/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="thanggun99.quanlynhahang">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
@@ -12,16 +13,18 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".phucVuView.activity.MainActivity">
+
+        <activity android:name=".view.activity.MainActivity"
+            android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
-            android:name=".phucVuView.activity.LoginActivity"
+            android:name=".view.activity.LoginActivity"
             android:label="@string/title_activity_login">
 
         </activity>
