--- a/QuanLyNhaHang/app/src/main/AndroidManifest.xml
+++ b/QuanLyNhaHang/app/src/main/AndroidManifest.xml
@@ -29,13 +29,13 @@
 
         </activity>
 
-        <service android:name=".MyFirebaseMessagingService">
+        <service android:name=".service.MyFirebaseMessagingService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
 
-        <service android:name=".MyFirebaseIDService">
+        <service android:name=".service.MyFirebaseIDService">
             <intent-filter>
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
