--- a/QuanLyNhaHang/app/build.gradle
+++ b/QuanLyNhaHang/app/build.gradle
@@ -30,7 +30,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:support-v4:24.2.1'
     //noinspection GradleCompatible
-    compile 'com.android.support:recyclerview-v7:25.0.1'
+    compile 'com.android.support:recyclerview-v7:+'
     compile 'com.google.firebase:firebase-messaging:10.0.1'
     compile 'com.android.support:design:24.2.1'
 }
