--- a/QuanLyNhaHang/app/src/main/AndroidManifest.xml
+++ b/QuanLyNhaHang/app/src/main/AndroidManifest.xml
@@ -16,17 +16,17 @@
 
         <activity android:name=".view.activity.MainActivity"
             android:screenOrientation="landscape">
+
+        </activity>
+
+        <activity
+            android:name=".view.activity.LoginActivity"
+            android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <activity
-            android:name=".view.activity.LoginActivity"
-            android:label="@string/title_activity_login">
-
         </activity>
 
         <service android:name=".service.MyFirebaseMessagingService">
